syntax = "proto3";

package internal.api.sagataskqueue;

option go_package = "github.com/rnovatorov/soegur/internal/api/sagataskqueuepb";

import "google/protobuf/struct.proto";

message EnqueueRequest {
    string saga_id = 1;
    string step_id = 2;
    bool compensation = 3;
    string task_type = 4;
    google.protobuf.Struct task_input = 5;
}

message ExecutionResult {
    string saga_id = 1;
    string step_id = 2;
    bool compensation = 3;
    google.protobuf.Value output = 4;
    string error = 5;
}
